http://www.mbdyn.org

Copyright (C) 1996-2012

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added AfterPredict & Restart to module-octave
		  (Reinhard Resch)
		- added inverse square constitutive law
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix restart bug (Reinhard Resch)

MBDyn 1.5.1
	Enhancements:
		- added "ifndef" declaration modifier for var redefinition
		- added module-nodedistdrive (Reinhold Resch)
	Backward compatibility issues:
		- moved GRAALL damper to module-damper-graall
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix build when sched_setaffinity() is unavailable
		- fix file name handling in windows (mingw)

MBDyn 1.5.0
	Enhancements:
		- added displacement-only nodes and selected basic elements
		- added membrane element (Marco Morandini & Tommaso Solcia)
		- added continuous contact constitutive law (Matteo Fancello)
		- added inverse dynamics body for weight tailoring
		- added "other" specifier to total pin joint input
		- added dof stats output to file (Reinhard Resch)
		- added '-E' to enable fpe checking
		- added module-octave and related modules (Reinhard Resch)
		- drive drive made differentiable (Reinhard Resch)
		- added "m" (mass) to body private data (Louis Gagnon)
		- added module-eu2phi TplDriveCaller wrapper
		  (suggested by Tingnan Zhang)
		- added built-in 'TRUE' and 'FALSE' boolean const vars
		- added built-in int/real limit const vars
		- added module-wheel4 (Louis Gagnon)
	Backward compatibility issues: